---
source: tests/codegen_snapshot_tests.rs
assertion_line: 3169
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Point {
    pub x: i64,
    pub y: i64,
}
impl incan_stdlib::reflection::HasClassName for Point {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Point {
    fn __class_name__() -> &'static str {
        "Point"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Point {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Point {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 2] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("x"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("x"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("y"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("y"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Point {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "x" => Some(format!("{}", self.x)),
            "y" => Some(format!("{}", self.y)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![
            ("x".to_string(), format!("{}", self.x)), ("y".to_string(), format!("{}",
            self.y))
        ]
    }
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Rectangle {
    pub width: i64,
    pub height: i64,
}
impl incan_stdlib::reflection::HasClassName for Rectangle {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Rectangle {
    fn __class_name__() -> &'static str {
        "Rectangle"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Rectangle {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Rectangle {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 2] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("width"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("width"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("height"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("height"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Rectangle {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "width" => Some(format!("{}", self.width)),
            "height" => Some(format!("{}", self.height)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![
            ("width".to_string(), format!("{}", self.width)), ("height".to_string(),
            format!("{}", self.height))
        ]
    }
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Circle {
    radius: f64,
}
impl incan_stdlib::reflection::HasClassName for Circle {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Circle {
    fn __class_name__() -> &'static str {
        "Circle"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Circle {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Circle {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 0] = [];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Circle {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
impl Circle {
    pub fn area(&self) -> f64 {
        return 3.14159 * self.radius * self.radius;
    }
    pub fn circumference(&self) -> f64 {
        return 2.0 * 3.14159 * self.radius;
    }
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Counter {
    count: i64,
}
impl incan_stdlib::reflection::HasClassName for Counter {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Counter {
    fn __class_name__() -> &'static str {
        "Counter"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Counter {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Counter {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 0] = [];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Counter {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
impl Counter {
    pub fn increment(&mut self) {
        self.count = self.count + 1;
    }
    pub fn decrement(&mut self) {
        self.count = self.count - 1;
    }
    pub fn get_count(&self) -> i64 {
        return self.count;
    }
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Stack {
    items: Vec<i64>,
}
impl incan_stdlib::reflection::HasClassName for Stack {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Stack {
    fn __class_name__() -> &'static str {
        "Stack"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Stack {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Stack {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 0] = [];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Stack {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
impl Stack {
    pub fn push(&mut self, item: i64) {
        let _ = self.items.push(item);
    }
    pub fn pop(&self) -> i64 {
        if ::std::convert::identity(self.items.len() as i64) > 0 {
            return incan_stdlib::collections::__private::list_pop(&mut self.items);
        }
        return -1;
    }
    pub fn size(&self) -> i64 {
        return ::std::convert::identity(self.items.len() as i64);
    }
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Calculator {
    name: String,
}
impl incan_stdlib::reflection::HasClassName for Calculator {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Calculator {
    fn __class_name__() -> &'static str {
        "Calculator"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Calculator {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Calculator {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 0] = [];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Calculator {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
impl Calculator {
    pub fn add(&self, a: i64, b: i64) -> i64 {
        return a + b;
    }
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Person {
    name: String,
    age: i64,
}
impl incan_stdlib::reflection::HasClassName for Person {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Person {
    fn __class_name__() -> &'static str {
        "Person"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Person {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Person {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 0] = [];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Person {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
impl Person {
    pub fn greet(&self) -> String {
        return {
            let __parts: [&str; 2usize] = ["Hello, I'm ", ""];
            let __args: Vec<String> = vec![format!("{}", self.name)];
            incan_stdlib::strings::fstring(&__parts, &__args)
        };
    }
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Employee {
    person: Person,
    employee_id: i64,
}
impl incan_stdlib::reflection::HasClassName for Employee {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Employee {
    fn __class_name__() -> &'static str {
        "Employee"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Employee {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Employee {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 0] = [];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Employee {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
impl Employee {
    pub fn get_info(&self) -> String {
        let greeting: String = self.person.greet();
        return {
            let __parts: [&str; 3usize] = ["", " (ID: ", ")"];
            let __args: Vec<String> = vec![
                format!("{}", greeting), format!("{}", self.employee_id)
            ];
            incan_stdlib::strings::fstring(&__parts, &__args)
        };
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let mut p: Point = Point { x: 0, y: 0 };
    p.x = 10;
    p.y = 20;
    let _ = println!(
        "{}", { let __parts : [& str; 3usize] = ["Point: (", ", ", ")"]; let __args : Vec
        < String > = vec![format!("{}", p.x), format!("{}", p.y)];
        incan_stdlib::strings::fstring(& __parts, & __args) }
    );
    let rect: Rectangle = Rectangle { width: 5, height: 10 };
    let _ = println!(
        "{}", { let __parts : [& str; 3usize] = ["Rectangle: ", "x", ""]; let __args :
        Vec < String > = vec![format!("{}", rect.width), format!("{}", rect.height)];
        incan_stdlib::strings::fstring(& __parts, & __args) }
    );
    let circle: Circle = Circle { radius: 5.0 };
    let area: f64 = circle.area();
    let circumference: f64 = circle.circumference();
    let _ = println!(
        "{}", { let __parts : [& str; 3usize] = ["Circle area: ", ", circumference: ",
        ""]; let __args : Vec < String > = vec![format!("{}", area), format!("{}",
        circumference)]; incan_stdlib::strings::fstring(& __parts, & __args) }
    );
    let mut counter: Counter = Counter { count: 0 };
    let _ = counter.increment();
    let _ = counter.increment();
    let _ = counter.increment();
    let count: i64 = counter.get_count();
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["Counter: ", ""]; let __args : Vec <
        String > = vec![format!("{}", count)]; incan_stdlib::strings::fstring(& __parts,
        & __args) }
    );
    let _ = counter.decrement();
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["After decrement: ", ""]; let __args :
        Vec < String > = vec![format!("{}", counter.get_count())];
        incan_stdlib::strings::fstring(& __parts, & __args) }
    );
    let items_list: Vec<i64> = vec![];
    let mut stack: Stack = Stack { items: items_list };
    let _ = stack.push(10);
    let _ = stack.push(20);
    let _ = stack.push(30);
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["Stack size: ", ""]; let __args : Vec <
        String > = vec![format!("{}", stack.size())]; incan_stdlib::strings::fstring(&
        __parts, & __args) }
    );
    let top: i64 = stack.pop();
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["Popped: ", ""]; let __args : Vec <
        String > = vec![format!("{}", top)]; incan_stdlib::strings::fstring(& __parts, &
        __args) }
    );
    let calc: Calculator = Calculator {
        name: "BasicCalc".to_string(),
    };
    let result: i64 = calc.add(5, 3);
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["5 + 3 = ", ""]; let __args : Vec <
        String > = vec![format!("{}", result)]; incan_stdlib::strings::fstring(& __parts,
        & __args) }
    );
    let alice: Person = Person {
        name: "Alice".to_string(),
        age: 30,
    };
    let emp: Employee = Employee {
        person: alice,
        employee_id: 12345,
    };
    let info: String = emp.get_info();
    let _ = println!("{}", info);
}
fn main() {
    main();
}
